--- a/Customer360.Legacy.Reader/Customer360.Legacy.Reader/Customer360.Legacy.Reader.csproj
+++ b/Customer360.Legacy.Reader/Customer360.Legacy.Reader/Customer360.Legacy.Reader.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Api.Infraestrutura.Core.Dapper" Version="1.0.0.46796" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Customer360.Legacy.Entities\Customer360.Legacy.Entities.csproj" />
   </ItemGroup>
 
