--- a/Customer360.Legacy.Reader.Test/Customer360.Legacy.Reader.Test.csproj
+++ b/Customer360.Legacy.Reader.Test/Customer360.Legacy.Reader.Test.csproj
@@ -7,9 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Api.Infraestrutura.Core" Version="1.0.0.46796" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.5.1" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Customer360.Legacy.Reader\Customer360.Legacy.Reader\Customer360.Legacy.Reader.csproj" />
   </ItemGroup>
 
 </Project>
