--- a/Customer360.Legacy.Entities/Customer360.Legacy.Entities.csproj
+++ b/Customer360.Legacy.Entities/Customer360.Legacy.Entities.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="8.0.3" />
+  </ItemGroup>
+
 </Project>
