--- a/Customer360.Legacy.Reader/Customer360.Legacy.Reader/Customer360.Legacy.Reader.csproj
+++ b/Customer360.Legacy.Reader/Customer360.Legacy.Reader/Customer360.Legacy.Reader.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Api.Infraestrutura.Core.Dapper" Version="1.0.0.46796" />
+    <PackageReference Include="Dapper" Version="1.50.4" />
   </ItemGroup>
 
   <ItemGroup>
