Escrita no new4J

--- a/Customer360.Legacy.Reader/Customer360.Legacy.Reader/Customer360.Legacy.Reader.csproj
+++ b/Customer360.Legacy.Reader/Customer360.Legacy.Reader/Customer360.Legacy.Reader.csproj
@@ -7,10 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Api.Infraestrutura.Core.Dapper" Version="1.0.0.46796" />
     <PackageReference Include="Dapper" Version="1.50.4" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\Customer360.Legacy.Entities\Customer360.Legacy.Entities.csproj" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
 </Project>
